@@ -32,18 +32,19 @@ enum {
 	MODE_TORRENT   = 0x10,
 
 	/* misc options */
-	OPT_EMBED_CRC = 0x20,
-	OPT_RECURSIVE = 0x40,
-	OPT_SKIP_OK   = 0x80,
-	OPT_IGNORE_CASE = 0x100,
-	OPT_VERBOSE   = 0x200,
-	OPT_PERCENTS  = 0x400,
-	OPT_SPEED     = 0x800,
-	OPT_BT_PRIVATE  = 0x1000,
-	OPT_UPPERCASE = 0x2000,
-	OPT_LOWERCASE = 0x4000,
-	OPT_GOST_REVERSE = 0x8000,
-	OPT_BENCH_RAW = 0x10000,
+	OPT_EMBED_CRC  = 0x20,
+	OPT_RECURSIVE  = 0x40,
+	OPT_FOLLOW     = 0x80,
+	OPT_SKIP_OK    = 0x100,
+	OPT_IGNORE_CASE = 0x200,
+	OPT_VERBOSE    = 0x400,
+	OPT_PERCENTS   = 0x800,
+	OPT_SPEED      = 0x1000,
+	OPT_BT_PRIVATE = 0x2000,
+	OPT_UPPERCASE  = 0x4000,
+	OPT_LOWERCASE  = 0x8000,
+	OPT_GOST_REVERSE = 0x10000,
+	OPT_BENCH_RAW  = 0x20000,
 
 #ifdef _WIN32
 	OPT_UTF8 = 0x10000000,
